data/derived/comb/progs/unify/prog2522.ml.out
Characters 93-107:
  let fixpoint (f,b) = wwhile ((let whilesFun f' b' = let fOfB = f' (b') in (b', fOfB = b') in whilesFun f, b), b);;
                                                                                               ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
